endpoint/k8s/canary/endpoint.dp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: endpoint-canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: endpoint-canary
  template:
    metadata:
      labels:
        app: endpoint-canary
    spec:
      containers:
      - name: endpoint-canary
        image: endpoint-service
        imagePullPolicy: Never
        ports:
        - containerPort: 2222
