endpoint/k8s/canary/endpoint.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: endpoint-svc-canary
spec:
  ports:
  - port: 2222
    targetPort: 2222
    protocol: TCP
    name: http
  selector:
    app: endpoint-canary
